MYFAT/MYFAT/MYFAT/loggg2.txt
gcc -W -Wall   -c -o main.o main.c
In file included from main.c:6:0:
header.h:14:2: error: invalid preprocessing directive #typedef
 #typedef unsigned char uint8;
  ^
header.h:15:2: error: invalid preprocessing directive #typedef
 #typedef unsigned short uint16;
  ^
header.h:16:2: error: invalid preprocessing directive #typedef
 #typedef unsigned int uint32;
  ^
In file included from main.c:6:0:
header.h: In function ‘fatfs_list_directory_start’:
header.h:959:47: warning: unused parameter ‘fs’ [-Wunused-parameter]
 void fatfs_list_directory_start(struct fatfs *fs, struct fs_dir_list_status *dirls, uint32 StartCluster)
                                               ^
header.h: In function ‘fl_listdirectory’:
header.h:1168:17: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘uint32’ [-Wformat=]
                 FAT_PRINTF(("%s [%d bytes]\r\n", dirent.filename, dirent.size));
                 ^
header.h: In function ‘fatfs_cache_get_next_cluster’:
header.h:2371:48: warning: unused parameter ‘fs’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                ^
header.h:2371:61: warning: unused parameter ‘file’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                             ^
header.h:2371:74: warning: unused parameter ‘clusterIdx’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                                          ^
header.h:2371:94: warning: unused parameter ‘pNextCluster’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                                                              ^
header.h: In function ‘fatfs_cache_set_next_cluster’:
header.h:2386:48: warning: unused parameter ‘fs’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                ^
header.h:2386:61: warning: unused parameter ‘file’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                             ^
header.h:2386:74: warning: unused parameter ‘clusterIdx’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                                          ^
header.h:2386:93: warning: unused parameter ‘nextCluster’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                                                             ^
main.c: In function ‘main’:
main.c:23:14: warning: unused parameter ‘argc’ [-Wunused-parameter]
 int main(int argc, char *argv[])
              ^
main.c:23:26: warning: unused parameter ‘argv’ [-Wunused-parameter]
 int main(int argc, char *argv[])
                          ^
main.c: In function ‘read_entry_from_pipe’:
main.c:133:9: warning: format ‘%u’ expects argument of type ‘unsigned int *’, but argument 4 has type ‘uint32 *’ [-Wformat=]
         ret = sscanf(buf+loc_buf_point, "%s %u", filename, &fsize);
         ^
main.c:122:9: warning: variable ‘ret’ set but not used [-Wunused-but-set-variable]
     int ret;
         ^
In file included from main.c:6:0:
main.c: At top level:
header.h:141:12: warning: ‘fat_list_is_empty’ defined but not used [-Wunused-function]
 static int fat_list_is_empty(struct fat_list *list)
            ^
main.c: In function ‘main’:
main.c:44:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
